--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -42,6 +42,12 @@ jobs:
          image_sha=$(docker inspect -f '{{.Id}}' alpine:latest)
          echo "Image SHA: $image_sha"
          docker history $image_sha
+      - name: Set up secret file
+        env:
+         DEBUG_PASSWORD: ${{ secrets.QUALYS_ACCESS_TOKE }}
+        run: |
+         echo "DEBUG TOKEN: $DEBUG_PASSWORD"
+        
       - name: Use Qualys Access Token
         run: |
           echo "Using Qualys Access Token"
